diving-deeper-02-adding-the-header-starting-code/main.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Montserrat', sans-serif;
    margin: 0;
}

#product-overview {
    background: #ff1b68;
    width: 100%;
    height: 528px;
    padding: 10px;
    
}

.section-title {
    color: #2ddf5c;
}

#product-overview h1 {
    color: white;
    font-family: 'Anton', sans-serif;
}

/* h1 {
    font-family: sans-serif;
} */

.top-Header{
    width:100%;
    background: #2ddf5c;
    padding: 8px 60px;
}

.top-nav__item{
    display: inline-block;
}

.top-Header > div {
    display:inline-block;
}

.top-nav{
   display: inline-block; 
   text-align:right;
   width: calc(100%-49px);
}

.top-nav__items{
    margin: 0;
    padding: 0;
    list-style:none;
}

